# claude-test-kit

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SKILL.md  capabilities.yaml  pyproject.toml  requirements.txt  run_tests.sh
.ctk/: ledger.json
.github/workflows/: caps.yml  ci.yml
caps/: __init__.py  cli.py  doctor.py  fingerprint.py  freshness.py  gate.py  hookinstall.py  initializer.py  ledger.py  manifest.py  manifest_edit.py  ponytail.py  review.py  runner.py  state.py
checks/: test_docs_direction.py
ctk/: __init__.py  contracts.py  docs.py  docs_direction.py
docs/superpowers/plans/: 2026-06-15-capability-verification-discovery.md  2026-06-15-capability-verification-mvp.md  2026-06-15-capability-verification-stop-hook.md  2026-06-16-caps-init.md  2026-06-17-doc-staleness-detection.md
docs/superpowers/specs/: 2026-06-15-capability-verification-design.md  2026-06-15-capability-verification-discovery-design.md  2026-06-15-capability-verification-stop-hook-design.md  2026-06-16-caps-init-design.md  2026-06-17-doc-staleness-detection-design.md
examples/: api_client.py  buggy_word_count.py  store.py  word_count.py
tests/integration/: conftest.py  test_caps_add_cli.py  test_caps_end_to_end.py  test_caps_gate_cli.py  test_caps_init_cli.py  test_caps_wrapper.py  test_cli_integration.py  test_http_integration.py  test_store_integration.py
tests/unit/: test_api_client_unit.py  test_caps_backup.py  test_caps_cli.py  test_caps_doctor.py  test_caps_fingerprint.py  test_caps_freshness.py  test_caps_gate.py  test_caps_hookinstall.py  test_caps_initializer.py  test_caps_ledger.py  test_caps_manifest.py  test_caps_manifest_edit.py  test_caps_ponytail.py  test_caps_review.py  test_caps_runner.py  test_caps_state.py  test_ctk_unit.py  test_docs_current.py  test_docs_direction_unit.py  test_docs_unit.py  test_error_log_guard.py  test_store_unit.py
